--- a/rt1052.uvprojx
+++ b/rt1052.uvprojx
@@ -591,9 +591,6 @@
           <GroupName>::CMSIS</GroupName>
         </Group>
         <Group>
-          <GroupName>::Compiler</GroupName>
-        </Group>
-        <Group>
           <GroupName>::Device</GroupName>
         </Group>
         <Group>
@@ -1320,9 +1317,6 @@
           <GroupName>::CMSIS</GroupName>
         </Group>
         <Group>
-          <GroupName>::Compiler</GroupName>
-        </Group>
-        <Group>
           <GroupName>::Device</GroupName>
         </Group>
         <Group>
@@ -1399,8 +1393,8 @@
           <targetInfo name="nor_sdram"/>
         </targetInfos>
       </component>
-      <component Cclass="CMSIS" Cgroup="CORE" Cvendor="ARM" Cversion="5.3.0" condition="ARMv6_7_8-M Device">
-        <package name="CMSIS" schemaVersion="1.3" url="http://www.keil.com/pack/" vendor="ARM" version="5.6.0"/>
+      <component Cclass="CMSIS" Cgroup="CORE" Cvendor="ARM" Cversion="5.4.0" condition="ARMv6_7_8-M Device">
+        <package name="CMSIS" schemaVersion="1.3" url="http://www.keil.com/pack/" vendor="ARM" version="5.7.0"/>
         <targetInfos>
           <targetInfo name="debug"/>
           <targetInfo name="nor_sdram"/>
@@ -1408,13 +1402,6 @@
       </component>
       <component Capiversion="2.1.3" Cclass="CMSIS" Cgroup="RTOS2" Csub="FreeRTOS" Cvendor="ARM" Cversion="10.2.0" condition="FreeRTOS RTOS2 CortexM">
         <package license="License/license.txt" name="CMSIS-FreeRTOS" schemaVersion="1.4" url="http://www.keil.com/pack/" vendor="ARM" version="10.2.0"/>
-        <targetInfos>
-          <targetInfo name="debug"/>
-          <targetInfo name="nor_sdram"/>
-        </targetInfos>
-      </component>
-      <component Cbundle="ARM Compiler" Cclass="Compiler" Cgroup="Event Recorder" Cvariant="DAP" Cvendor="Keil" Cversion="1.4.0" condition="Cortex-M Device">
-        <package name="ARM_Compiler" schemaVersion="1.4.9" url="http://www.keil.com/pack/" vendor="Keil" version="1.6.2"/>
         <targetInfos>
           <targetInfo name="debug"/>
           <targetInfo name="nor_sdram"/>
@@ -1661,13 +1648,10 @@
     </components>
     <files>
       <file attr="config" category="header" name="Config\EventRecorderConf.h" version="0.0.0">
-        <instance index="0">RTE\Compiler\EventRecorderConf.h</instance>
+        <instance index="0" removed="1">RTE\Compiler\EventRecorderConf.h</instance>
         <component Cbundle="ARM Compiler" Cclass="Compiler" Cgroup="Event Recorder" Cvariant="DAP" Cvendor="Keil" Cversion="1.4.0" condition="Cortex-M Device"/>
         <package name="ARM_Compiler" schemaVersion="1.6.3" url="http://www.keil.com/pack/" vendor="Keil" version="1.6.3"/>
-        <targetInfos>
-          <targetInfo name="debug"/>
-          <targetInfo name="nor_sdram"/>
-        </targetInfos>
+        <targetInfos/>
       </file>
       <file attr="config" category="header" name="MIMXRT1052.h" version="1.0.0">
         <instance index="0">RTE\Device\MIMXRT1052CVL5B\MIMXRT1052.h</instance>
